refactor(chat): migrate to LangChain for provider flexibility
- Replaced custom requests-based Ollama implementation with LangChain
- Implemented ChatOllama, ChatPromptTemplate, and StrOutputParser
- Added support for easy provider switching (OpenAI, Anthropic, Google)
- Created provider factory functions for alternative LLMs
- Updated requirements.txt with langchain-ollama package
- Added optional provider dependencies (commented)
- Enhanced .env.example with API key configuration for all providers
- Improved error handling with TimeoutError and ConnectionError
- Maintained backward compatibility with existing ChatGenerator interface

BREAKING CHANGE: Removed requests dependency in favor of LangChain abstractions

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,42 @@ QDRANT_URL=http://vector-db:6333
 # Embedding model for document vectorization
 EMBEDDING_MODEL=nomic-embed-text
 
-# LLM model for chat responses
+# LLM model for chat responses (Ollama)
 LLM_MODEL=qwen2.5:0.5b
+
+# LLM Provider: ollama (default), openai, anthropic, google
+# LLM_PROVIDER=ollama
+
+# LLM generation parameters
+LLM_TEMPERATURE=0.7
+LLM_TOP_P=0.9
+LLM_TOP_K=40
+LLM_TIMEOUT=300
+
+# -----------------------------------------------------------------------------
+# Alternative LLM Provider API Keys (Optional)
+# -----------------------------------------------------------------------------
+# Uncomment and set if using alternative providers
+# Requires installing the corresponding langchain package
+
+# OpenAI Configuration
+# OPENAI_API_KEY=sk-...
+# OPENAI_MODEL=gpt-4
+# OPENAI_ORG_ID=org-...
+
+# Anthropic Configuration  
+# ANTHROPIC_API_KEY=sk-ant-...
+# ANTHROPIC_MODEL=claude-3-sonnet-20240229
+
+# Google Gemini Configuration
+# GOOGLE_API_KEY=AIza...
+# GOOGLE_MODEL=gemini-pro
+
+# AWS Bedrock Configuration
+# AWS_ACCESS_KEY_ID=...
+# AWS_SECRET_ACCESS_KEY=...
+# AWS_REGION=us-east-1
+# BEDROCK_MODEL=anthropic.claude-v2
 
 # -----------------------------------------------------------------------------
 # Qdrant Settings
